# svg2b2d

./: .gitignore  CMakeLists.txt
include/: svgbuilder.h
src/: bspan.h  bspanutil.h  irender.h  svg.cpp  svgshapes.h  svgtypes.h  svgutils.h
